--- a/placementCell.html
+++ b/placementCell.html
@@ -2,4 +2,6 @@ user story for Placement Cell:
 
 1.register:
    enroll your id in  placement cell
-2.
+2.login:
+  create your user name and password to login in placement
+3.placement officer:  
