--- a/placementCell.html
+++ b/placementCell.html
@@ -5,3 +5,5 @@ user story for Placement Cell:
 2.login:
   create your user name and password to login in placement
 3.placement officer:  
+   assign a person to manage all placement activities for students and to manage companies
+4.
