--- a/placementCell.html
+++ b/placementCell.html
@@ -6,4 +6,4 @@ user story for Placement Cell:
   create your user name and password to login in placement
 3.placement officer:  
    assign a person to manage all placement activities for students and to manage companies
-4.
+4.certificates
